--- a/wp-content/themes/morz/custom/umowa-serwisowa.css
+++ b/wp-content/themes/morz/custom/umowa-serwisowa.css
@@ -1,5 +1,11 @@
 h3.pp-cf7-form-title,
-p.pp-cf7-form-description {
+p.pp-cf7-form-description,
+#nowa-umowa {
+  display: none;
+}
+
+#krok-4-content,
+#rodo-content {
   display: none;
 }
 
@@ -7,12 +13,14 @@ p.pp-cf7-form-description {
   background: linear-gradient(180deg, #EDEFF0 150px, #FFF 100px);
 }
 
-#formularz input[readonly] {
+#formularz input[readonly],
+#krok-4-content input[readonly] {
   cursor: not-allowed;
   background-color: #eee;
 }
 
-#formularz .wpcf7-form-control.wpcf7-select {
+#formularz .wpcf7-form-control.wpcf7-select,
+#krok-4-content .wpcf7-form-control.wpcf7-select {
   margin-top: 5px;
   margin-bottom: 10px;
 }
@@ -263,6 +271,16 @@ p.pp-cf7-form-description {
   font-size: 16px;
   line-height: 1.6;
   color: #3ca9d1;
+}
+
+#main #nowa-umowa.pp-notification-wrapper {
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+}
+
+#main #nowa-umowa.pp-notification-wrapper .pp-notification-inner .pp-notification-icon span.pp-icon,
+#main #nowa-umowa.pp-notification-wrapper .pp-notification-inner .pp-notification-content p {
+  color: #3c763d;
 }
 
 #main .wpcf7-response-output {
